<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/smallTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="@dimen/_0"
        tools:context=".MainActivity">

        <com.gyj.calculator.mycontroller.MytextView
            android:id="@+id/BigTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textSize="55sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:layout_constraintVertical_bias="0.511" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96107054" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.08481532" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04136253" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.27" />

        <TextView
            android:id="@+id/SmallTextView"
            android:layout_width="378dp"
            android:layout_height="38dp"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/BigTextView"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline4" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="124dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline5">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:text="@string/_1"
                android:textSize="24sp"
                app:layout_column="0"
                app:layout_row="0" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:text="@string/_2"
                android:textSize="24sp"
                app:layout_column="1"
                app:layout_row="0" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:text="@string/_3"
                android:textSize="24sp"
                app:layout_column="2"
                app:layout_row="0" />

            <Button
                android:id="@+id/buttonjia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:text="@string/jia"
                android:textSize="24sp"
                app:layout_column="3"
                app:layout_row="0" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:text="@string/_4"
                android:textSize="24sp"
                app:layout_column="0"
                app:layout_row="1" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:text="@string/_5"
                android:textSize="24sp"
                app:layout_column="1"
                app:layout_row="1" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:text="@string/_6"
                android:textSize="24sp"
                app:layout_column="2"
                app:layout_row="1" />

            <Button
                android:id="@+id/buttonjian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:text="@string/jian"
                android:textSize="24sp"
                app:layout_column="3"
                app:layout_row="1" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:text="@string/_7"
                android:textSize="24sp"
                app:layout_column="0"
                app:layout_row="2" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:text="@string/_8"
                android:textSize="24sp"
                app:layout_column="1"
                app:layout_row="2" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:text="@string/_9"
                android:textSize="24sp"
                app:layout_column="2"
                app:layout_row="2" />

            <Button
                android:id="@+id/buttonchen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:text="@string/chen"
                android:textSize="24sp"
                app:layout_column="3"
                app:layout_row="2" />

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:text="@string/_0"
                android:textSize="24sp"
                app:layout_column="1"
                app:layout_row="3" />

            <Button
                android:id="@+id/buttonPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:text="@string/Point"
                android:textSize="24sp"
                app:layout_column="2"
                app:layout_row="3" />

            <Button
                android:id="@+id/buttonCE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:text="@string/CE"
                android:textSize="24sp"
                app:layout_column="0"
                app:layout_row="3" />

            <Button
                android:id="@+id/buttoncalcu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:text="@string/calculator"
                android:textSize="24sp"
                app:layout_column="0"
                app:layout_row="4" />

            <Button
                android:id="@+id/buttonchu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:text="@string/chu"
                android:textSize="24sp"
                app:layout_column="3"
                app:layout_row="3" />

            <ImageButton
                android:id="@+id/buttonback"
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                app:layout_column="2"
                app:layout_row="4"
                app:srcCompat="@drawable/ic_baseline_backspace_24" />

        </androidx.gridlayout.widget.GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>